--- a/templates/model.html
+++ b/templates/model.html
@@ -1,9 +1,9 @@
-{%  load staticfiles %}
+{% load staticfiles %}
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Mytagger</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -15,7 +15,16 @@
 <style>
 	body {
     padding-top: 10px;
-}z
+}
+.footer {
+		   position:relative;
+		   left: 0;
+		   bottom: 0;
+		   width: 100%;
+		   background-color:#33B5E5;
+		   color: white;
+		   text-align: center;
+		}
 .panel-login {
 	border-color: #ccc;
 	-webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
@@ -144,6 +153,19 @@
 </head>
 <body>
 
+<nav class="navbar navbar-default" style="background-color:#fff;">
+  <div class="container-fluid">
+	    
+    <div class="navbar-header">
+		<div>
+							<center> <img class="navbar-brand" src="{%  static "img/Photobucket_logo.png" %}"style="width:300px; height:60px;"></center>
+						</div>	
+						
+    </div>
+    <ul class="nav navbar-nav">
+	        <li><a style="color:#212126;"  class="btn1"  href="#"  data-toggle="modal" data-target="#myModal" >Goto Mytagger </a></li>
+    </ul>
+ </nav>
 <div class="container">
   <!-- Modal -->
   
@@ -151,36 +173,37 @@
     
       <!-- Modal content-->
       <div class="modal-content1">
-        <div class="modal-header">
-            <h1>Photo Bucket</h1>
-        </div>
         <div class="modal-body">
         <div class="container">
     	<div class="row">
 			<div class="col-md-6 col-md-offset-3">
-				<div class="panel panel-login" style="box-shadow: 1px 1px 1px 1px;">
+				<div class="panel panel-login">
 					<div class="panel-heading">
 						<div class="row">
+							
 							<div class="col-xs-6">
 								<a href="#" class="active" id="login-form-link">Login</a>
 							</div>
-
 							<div class="col-xs-6">
 								<a href="#" id="register-form-link">Register</a>
 							</div>
 						</div>
 						<hr>
 					</div>
-					<div class="panel-body">
+			
+
+					<div class="panel-body" style="box-shadow: 1px 1px 1px 1px;">
+						<div>
+							<center><img src="{%  static "img/Photobucket_logo.png" %}" style="width:50%;"></center>
+						</div>	
+						
 						<div class="row">
 							<div class="col-lg-12">
 								<form id="login-form" action="{% url 'login' %}" method="post" role="form" style="display: block;">
-                                                {% csrf_token %}
-
-                                    <center><img src="{% static "img/log1.png" %}" alt="Logo"></center>
-
+								{% csrf_token %}
 									<div class="form-group">
 	 
+										<center><img src="{%  static "img/log1.png" %}" width="auto" height="130" style="margin:10px;" > </center>
 									</div>
 									<div class="form-group">
 
@@ -210,14 +233,13 @@
 										</div>
 									</div>
 								</form>
-                                <form id="register-form" action="{% url 'register' %}" method="post" role="form" style="display: none;">
-                                    {%  csrf_token %}
+								<form id="register-form" action="{% url 'register' %}" method="post" role="form" style="display: none;">
+								    {% csrf_token %}
+
 									<div class="form-group">
-										<input type="text" name="first_name" id="first_name" tabindex="1" class="form-control" placeholder="Fullname" value="">
+										<input type="text" name="fullname" id="fullname" tabindex="1" class="form-control" placeholder="Fullname" value="">
 									</div>
-                                    <div class="form-group">
-										<input type="text" name="last_name" id="last_name" tabindex="1" class="form-control" placeholder="Fullname" value="">
-									</div>
+									
 									<div class="form-group">
 										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
 									</div>
@@ -246,14 +268,17 @@
 		</div>
 	</div>
         </div>
-        <div class="modal-footer">@Copyright Photo Bucket
-        </div>
+        
       </div>
       
     </div>
   </div>
   
 </div>
+<div class="footer" id="mytag1">
+  <p>Mytagger</p>
+</div>
+
 
 </body>
 </html>
